[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game_BlockCrasher/Scripts/BlockCrasherOptions.gd" type="Script" id=1]
[ext_resource path="res://Assets/Backgrounds/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/FREELAH.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/UI/back_image.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/collision.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 56
extra_spacing_top = 20
extra_spacing_bottom = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 56
extra_spacing_top = 20
extra_spacing_bottom = 20
font_data = ExtResource( 3 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 680.0
margin_bottom = 920.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 140.0
margin_top = 192.0
margin_right = 540.0
margin_bottom = 780.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 400.0
margin_bottom = 588.0

[node name="StarLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "show stars"

[node name="PaddleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 198.0
margin_bottom = 174.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "Paddle"

[node name="Back" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 400.0
margin_bottom = 316.0
size_flags_horizontal = 4
texture_normal = ExtResource( 4 )

[node name="StarCheck" type="CheckBox" parent="."]
margin_left = 498.0
margin_top = 208.0
margin_right = 522.0
margin_bottom = 232.0
rect_scale = Vector2( 2.2, 2.2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PaddleColor" type="ColorPickerButton" parent="."]
margin_left = 370.0
margin_top = 303.0
margin_right = 540.0
margin_bottom = 343.0
rect_min_size = Vector2( 170, 40 )
size_flags_horizontal = 0
align = 2
color = Color( 0.168627, 0.333333, 1, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="toggled" from="StarCheck" to="." method="_on_StarCheck_toggled"]
[connection signal="color_changed" from="PaddleColor" to="." method="_on_PaddleColor_color_changed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
